--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <input
             type="text"
             class="search__field"
-            placeholder="Хоолны жор хайх" />
+            placeholder="Pasta эсвэл Pizza гэж хайна уу" />
           <button class="btn search__btn">
             <svg class="search__icon">
               <use href="img/icons.svg#icon-magnifying-glass"></use>
